feat: add global styles, footer component, and update homepage structure

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "Vitor Amaral de Melo",
   "license": "MIT",
   "packageManager": "yarn@4.2.2",
-  
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
